# Chiffren

./: CMakeLists.txt  Decryption.c  Decryption.h  Decryption_Vigenere.c  Decryption_Vigenere.h  Encryption.c  Encryption.h  Find_Key_Length.c  Häufigkeitsanalyse.c  Häufigkeitsanalyse.h  Kasiski_Test.c  Kasiski_Test.h  Letter_Sequences.c  Letter_Sequences.h  Makefile  README.md  Shift_Values_to_Word.c  Split_into_n_Strings.c  VigenereEncryption.c  VigenereEncryption.h  Vigenere_Encryption.c  break_caesar.c  break_caesar.h  break_cäsar.c  break_vigenere.c  brute_force.c  brute_force.h  caeser_chiffre_encrypted.txt  check_if_cracked.c  check_if_cracked.h  decrypt_caesar.c  decrypt_caesar.h  decrypt_cäsar.c  decrypt_cäsar.h  decrypt_vigenere.c  decrypt_vigenere.h  encrypt_caeser.c  encrypt_cäser.c  encrypt_cäser.h  encrypt_vigenere.c  (+26 more)
Break-Vigenere/: brute_force.c  brute_force.h  get_word_match_percentage.c  get_word_match_percentage.h
Break-Vigenere/Kasiski-Test/: find_key_length.c  find_key_length.h  find_triplets.c  find_triplets.h  kasiski_test.c  shift_values_to_word.c  split_into_n_strings.c  split_into_n_strings.h  weighted_biggest_divisor.c
Break_Vigenere/Kasiski-Test/: find_triplets.c  kasiski_test.c  shift_values_to_word.h  split_into_n_strings.c
Ceaser-Chiffre/: c_decryption.c  c_decryption.h  c_encryption.c  c_encryption.h  ceaser_decryption.c  ceaser_decryption.h  encryption_ceaser.c  encryption_ceaser.h
Ceaser-Chiffre/Decryption_Logic/: caeser_decryption_logic.c  caeser_decryption_logic.h
Ceaser-Chiffre/Encryption_Logic/: caeser_encryption_logic.c  caeser_encryption_logic.h
User-Interaction/: break_caesar.c  break_vigenere.c  break_vigenere.h  decrypt_caesar.c  decrypt_vigenere.c  decrypt_vigenere.h  encrypt_caeser.c  encrypt_vigenere.c  encrypt_vigenere.h  user_interaction.c  user_interaction.h
User_Interaction/: break_caesar.c  break_vigenere.c  decrypt_caesar.c  decrypt_caesar.h  encrypt_caeser.h  encrypt_vigenere.c  user_interaction.c
Vignere-Chiffre/: words.txt
Vignere-Chiffre/Decryption/: Decryption.h  decryption.c  decryption.h
Vignere-Chiffre/Decryption_Logic/: vigenere_decryption_logic.c  vigenere_decryption_logic.h
Vignere-Chiffre/Encryption/: Encryption.c  encryption.c  encryption.h
Vignere-Chiffre/Encryption_Logic/: vigenere_encryption_logic.c
data/: caeser_chiffre_decrypted.txt  words.txt
